2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: fix the pagination when it has
	a search, and fix the pagination and delete element in the page.
	Fixes: 2857846

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/exportdata.php, godmode/agentes/agent_manager.php,
	godmode/reporting/map_builder.php, godmode/reporting/graph_builder.php,
	godmode/alerts/alert_list.php: fix the bug that the div of autocomplete
	don't show.
	Fixes: 2856945

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/pandora.css, godmode/alerts/alert_list.php: minor fixes
	for styles warnings.

2009-09-14  Sancho Lerena <slerena@artica.es>

	* general/error_dbconfig.php, 
	  general/error_authconfig.php
	  general/error_emptyconfig.php: Error messages have it's own page.

	* config_process.php, functions_config.php: Removed "inline" error pages, 
	and moved out. Auto_update is not set to ON if not present, just once, and
	this is managed by extension itself.

	* functions.php: Added function "return_graphtype" to calculate graphtype
	depending on id_module_type.

	* styles/install.css: Some style fixes.

	* operation/agentes/estado_monitores.php: Some code cleanup using the new 
	function to get graphtype.

	* operation/agentes/estado_ultimopaquete.php: Some code cleanup with the
	new function to get graphtype and fixed a bug in data timestamp calculation.

	* operation/agentes/status_monitor.php: monitor list now show quick links 
	to graph and show latest data, like the main agent view.

2009-09-11  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events.php: change the order to include and write
	"<script>" in file for don't affect to ajax requests.
	Fixes: 2848523

2009-09-11  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php: fix bug for character "`" in
	name also in description, translate to html entitie.
	Fixes: 2838129
